Fix overflow on midsize screens

--- a/frontend/src/pages/NRVToken.css
+++ b/frontend/src/pages/NRVToken.css
@@ -126,4 +126,10 @@
     .nvr-card-display {
       grid-template-columns: 1fr;
     }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1000px) {
+  .nvr-card-display {
+    grid-template-columns: 1fr 1fr;
   }
+}
